UBT: Move code for cleaning a target into a separate mode. This simplifies the codepath when building a target, and avoids having to spawn UBT recursively to clean UHT.
#rb none
#rnx

[CL 4643835 by Ben Marsh in Dev-Build branch]

--- a/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
+++ b/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
@@ -141,6 +141,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Modes\BuildMode.cs" />
+    <Compile Include="Modes\CleanMode.cs" />
     <Compile Include="Modes\DeployMode.cs" />
     <Compile Include="Modes\GenerateProjectFilesMode.cs" />
     <Compile Include="Modes\SetupPlatformsMode.cs" />
