Sequencer: Fix field of view not getting imported through fbx.
There were actually a few issues here:

 - The sequencer import is always creating a cine camera actor. But the fbx camera in this case is not compatible - it's just a simple camera with field of view. Solution: Create a regular camera in this case.
 - The name for the camera doesn't match - that's causing the name matching to fail when copying properties from the fbx camera to the ue4 camera. Solution: Get the name from the camera node and not the camera itself.
 - Sequencer has a mapping that determines what fbx property names should match to what ue4 property names. That's defined in the ini and does not include FieldOfView. Solution: Add FieldOfView to ini.

#jira UE-67432
#rb none

[CL 4649620 by Max Chen in Dev-Sequencer branch]

--- a/Engine/Config/BaseEditorPerProjectUserSettings.ini
+++ b/Engine/Config/BaseEditorPerProjectUserSettings.ini
@@ -812,6 +812,7 @@ LoopMode=SLM_Loop
 +TrackSettings=(MatchingActorClass=/Script/Engine.Light,DefaultTracks=(None),DefaultPropertyTracks=((ComponentPath="LightComponent0",PropertyPath="Intensity"),(ComponentPath="LightComponent0",PropertyPath="LightColor")))
 
 [/Script/MovieSceneTools.MovieSceneToolsProjectSettings]
++FbxSettings=(FbxPropertyName="FieldOfView", PropertyPath=(ComponentName="CameraComponent",PropertyName="FieldOfView"))
 +FbxSettings=(FbxPropertyName="FocalLength", PropertyPath=(ComponentName="CameraComponent",PropertyName="CurrentFocalLength"))
 +FbxSettings=(FbxPropertyName="FocusDistance", PropertyPath=(ComponentName="CameraComponent",PropertyName="FocusSettings.ManualFocusDistance"))
 
