--- a/Engine/Config/BaseGame.ini
+++ b/Engine/Config/BaseGame.ini
@@ -51,7 +51,7 @@ CopyrightNotice=Fill out your copyright notice in the Description page of Projec
 Description=
 LicensingTerms=
 PrivacyPolicy=
-ProjectName=UE4Game
+ProjectName=
 ProjectVersion=1.0.0.0
 Homepage=
 SupportContact=
