Add a custom binary reader/writer class to DotNETUtilities which supports object graphs, containers, and nullable objects.
#rb none
#rnx

[CL 4665118 by Ben Marsh in Dev-Build branch]

--- a/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
+++ b/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
@@ -57,6 +57,8 @@
     <Compile Include="AssemblyUtils.cs" />
     <Compile Include="BinaryFormatterUtils.cs" />
     <Compile Include="BinaryReaderExtensions.cs" />
+    <Compile Include="BinaryArchiveReader.cs" />
+    <Compile Include="BinaryArchiveWriter.cs" />
     <Compile Include="BinaryWriterExtensions.cs" />
     <Compile Include="CommandLineArguments.cs" />
     <Compile Include="CommandLineAttribute.cs" />
