UBT: Rename UBTMakefile.cs to TargetMakefile.cs.
#rb none
#rnx

[CL 4665133 by Ben Marsh in Dev-Build branch]

--- a/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
+++ b/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
@@ -223,10 +223,10 @@
     <Compile Include="System\StartupTraceListener.cs" />
     <Compile Include="System\SupportedConfigurationsAttribute.cs" />
     <Compile Include="System\SupportedPlatformsAttribute.cs" />
+    <Compile Include="System\TargetMakefile.cs" />
     <Compile Include="System\TargetReceipt.cs" />
     <Compile Include="System\Timeline.cs" />
     <Compile Include="System\ToolMode.cs" />
-    <Compile Include="System\UBTMakefile.cs" />
     <Compile Include="System\VersionNumber.cs" />
     <Compile Include="System\XmlConfig.cs" />
     <Compile Include="System\XmlConfigData.cs" />
