UBT: When building a target, start prefetching the contents of engine/project/plugin source folders in parallel on background threads as soon as UBT starts up (by instantiating FileItem and DirectoryItem objects). This reduces I/O waits on the main thread when validating the contents of the makefile or building a target. Measured ~20% reduction in UBT times when using a makefile.
Other directories are probably worth prefetching too; needs measuring.

#rb none

[CL 4673733 by Ben Marsh in Dev-Build branch]

--- a/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
+++ b/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
@@ -190,6 +190,7 @@
     <Compile Include="System\CppCompileEnvironment.cs" />
     <Compile Include="System\CppDependencyCache.cs" />
     <Compile Include="System\CppIncludeParser.cs" />
+    <Compile Include="System\FileMetadataPrefetch.cs" />
     <Compile Include="System\SourceFileMetadataCache.cs" />
     <Compile Include="System\DataDrivenPlatformInfo.cs" />
     <Compile Include="System\DirectoryItem.cs" />
