Add a C# utility class for computing hashes of files and blocks of data.
#rb none
#rnx

[CL 4674740 by Ben Marsh in Dev-Build branch]

--- a/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
+++ b/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CommandLineArguments.cs" />
     <Compile Include="CommandLineAttribute.cs" />
     <Compile Include="CsProjectInfo.cs" />
+    <Compile Include="ContentHash.cs" />
     <Compile Include="DirectoryReference.cs" />
     <Compile Include="ExceptionUtils.cs" />
     <Compile Include="FastJSON\Formatter.cs" />
