UE-63983 - Fix and re-enable deployment server #jira UE-63983 #rb Jack.Porter
[CL 4688224 by Cosmin Sulea in Dev-Mobile branch]

--- a/Engine/Source/Programs/IOS/DeploymentServer/DeploymentServer.csproj
+++ b/Engine/Source/Programs/IOS/DeploymentServer/DeploymentServer.csproj
@@ -69,6 +69,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
@@ -94,12 +95,20 @@
       <Project>{B7C89A17-1CB7-42D7-B879-43297538C193}</Project>
       <Name>DeploymentInterface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DeploymentServerLauncher\DeploymentServerLauncher.csproj">
+      <Project>{0e71e8b6-849c-47c4-93b0-7e35971c6ac7}</Project>
+      <Name>DeploymentServerLauncher</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MobileDeviceInterface\MobileDeviceInterface.csproj">
       <Project>{C28B2A4B-4083-423E-B6C0-48058C46AAFE}</Project>
       <Name>MobileDeviceInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>StopDeploymentServer.bat
+</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
