Add PGO heartbeat to reduce timeout state (30 minutes down from 4 hours in some cases)
#ROBOMERGE-SOURCE: CL 4688401

[CL 4689006 by josh engebretson in Main branch]

--- a/Engine/Source/Programs/AutomationTool/Gauntlet/Gauntlet.Automation.csproj
+++ b/Engine/Source/Programs/AutomationTool/Gauntlet/Gauntlet.Automation.csproj
@@ -253,6 +253,7 @@
       <ItemGroup>
         <Compile Include="Platform\Windows\Gauntlet.TargetDeviceWindows.cs" />
         <Compile Include="Platform\Windows\Gauntlet.WindowsBuildSources.cs" />
+        <Compile Include="Platform\Windows\Gauntlet.WindowsPGO.cs" />
         <Compile Include="Platform\Windows\Gauntlet.SelfTest.TestTargetDeviceWindows.cs" />
       </ItemGroup>
     </When>
