Copying //Tasks/UE4/Dev-UEA-180-CurveCompression to Dev-Anim (//UE4/Dev-Anim)
#rb none
#fyi Martin.Wilson,Laurent.Delayen
#jira none

[CL 4692415 by Thomas Sarkanen in Dev-Anim branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2150,6 +2150,10 @@ HMDWornMovementThreshold = 50.0
 
 [/Script/Engine.AnimationSettings]
 bStripAnimationDataOnDedicatedServer=False
+
+[Animation.DefaultObjectSettings]
+CurveCompressionSettings="/Engine/Animation/DefaultAnimCurveCompressionSettings"
+
 [/Script/Engine.MeshSimplificationSettings]
 r.MeshReductionModule="QuadricMeshReduction"
 
