HTML5 - bring over github work to UE4 perforce
#jira UEMOB-474  Integrate multithreaded HTML5 into UE/Dev Mobile
#rn
#rb jack.porter

[CL 4707110 by Nick Shin in Dev-Mobile branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2020,16 +2020,14 @@ NameForGameView5="GameView5"
 
 [/Script/HTML5PlatformEditor.HTML5TargetSettings]
 Compressed=False
-HeapSizeDevelopment=1024
-HeapSizeShipping=1024
-TargetAsmjs=True
-TargetWebGL1=False
 EnableIndexedDB=False
 EnableSIMD=False
-EnableMultithreading=False
 DeployServerPort=53501
 EnableTracing=False
 CanvasScalingMode=Aspect
+EnableMultithreading=False
+OffscreenCanvas=False
+LLVMWasmBackend=False
 
 ; common browser locations - add your custom locations here
 [/Script/HTML5PlatformEditor.HTML5Browsers]
