Add checkbox to enable snapshot on Google Games
#jira UE-60685
#ue4
#android
#rb John.Mauney

[CL 4721332 by Chris Babcock in Dev-Mobile branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1885,6 +1885,7 @@ bBuildWithHiddenSymbolVisibility=false
 bSaveSymbols=false
 bAllowControllers=True
 bAllowIMU=True
+bEnableSnapshots=False
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKAPILevel=latest
