Added support for using display cutout region on Android - added new project setting bUseDisplayCutout - temporary restriction to HUAWEI devices for this release (remove later)
#android
#rb Jack.Porter


#ROBOMERGE-AUTHOR: chris.babcock
#ROBOMERGE-SOURCE: CL 4732433 via CL 4732462 via CL 4732476 via CL 4732493

[CL 4732510 by david hamm in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1894,6 +1894,7 @@ bBuildWithHiddenSymbolVisibility=false
 bSaveSymbols=false
 bAllowControllers=True
 bAllowIMU=True
+bUseDisplayCutout=False
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKAPILevel=latest
