Moving heuristics to Fortnite only.
#jira UE-65764
#rb none

[CL 4785067 by Matt Collins in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1075,9 +1075,9 @@ BuildWorkerTimeToLive=1200
 
 ; These values are for build machines only currently to reduce the number of SCWs spawned to reduce memory pressure
 bUseVirtualCores = False
-CookerMemoryUsedInGB = 49
-MemoryToLeaveForTheOSInGB = 3
-MemoryUsedPerSCWProcessInGB = 0.4
+; CookerMemoryUsedInGB = 49
+; MemoryToLeaveForTheOSInGB = 3
+; MemoryUsedPerSCWProcessInGB = 0.4
 
 
 [DevOptions.Debug]
