Add an option "Force 32bit Floating Point Precision" to the iOS project settings to have the shader compiler promote all half-float operations to FP32 as some projects on iOS encounter rendering issues when fragment shader calculations run into half-float precision limits.
#jira UE-68654
#rb none
#lockdown marcus.wassmer

[CL 4804101 by Mark Satterthwaite in Dev-Rendering branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1853,6 +1853,7 @@ bEnableCloudKitSupport=False
 bGenerateCrashReportSymbols=false
 bAutomaticSigning=false
 UseFastIntrinsics=False
+ForceFloats=False
 EnableMathOptimisations=True
 MaxShaderLanguageVersion=2
 
@@ -1994,6 +1995,7 @@ TargetArchitecture=X86_64UnknownLinuxGnu
 MaxShaderLanguageVersion=3
 +TargetedRHIs=SF_METAL_SM5
 UseFastIntrinsics=False
+ForceFloats=False
 EnableMathOptimisations=True
 
 [HMDPluginPriority]
