--- a/Engine/Source/Programs/IOS/DeploymentServerLauncher/DeploymentServerLauncher.csproj
+++ b/Engine/Source/Programs/IOS/DeploymentServerLauncher/DeploymentServerLauncher.csproj
@@ -41,7 +41,7 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Development|AnyCPU' ">
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\..\..\Binaries\DotNET\IOS\</OutputPath>
