Rename bSpawnPawn to accurate bSpawnPlayerController for UGameplayStatics::CreatePlayer. Also clarify parameter name for UGameInstance::CreateLocalPlayer #jira UE-69170 #rb Michael.Noland
[CL 4921149 by Marc Audy in 4.22 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -635,6 +635,8 @@ bUseStreamingPause=false
 +FunctionRedirects=(OldName="UserWidget.PlayAnimationAtTime",NewName="UserWidget.PlayAnimation")
 +FunctionRedirects=(OldName="AddChildWrapBox", NewName="AddChildToWrapBox")
 
++PropertyRedirects=(OldName="GameplayStatics.CreatePlayer.bSpawnPawn",NewName="bSpawnPlayerController")
+
 ; Chaos
 +ClassRedirects=(OldName="/Script/GeometryCollectionCore.GeometryCollection",NewName="/Script/GeometryCollectionEngine.GeometryCollection")
 +ClassRedirects=(OldName="/Script/GeometryCollectionCore.GeometryCollectionCache",NewName="/Script/GeometryCollectionEngine.GeometryCollectionCache")
