Remove unneeded whitelisting from AudioCapture plugin
#jira UE-69614
#android
#ios
#ue4
#fyi Ethan.Gellar
#rb Ethan.Gellar

[CL 4937225 by Chris Babcock in 4.22 branch]

--- a/Engine/Plugins/Runtime/AudioCapture/AudioCapture.uplugin
+++ b/Engine/Plugins/Runtime/AudioCapture/AudioCapture.uplugin
@@ -19,14 +19,12 @@
 		{
 			"Name" : "AudioCapture",
 			"Type" : "Runtime",
-      "LoadingPhase": "Default",
- 			"WhitelistPlatforms" : [ "Win64", "Lumin", "Mac" ]
-		},
+			"LoadingPhase": "Default"
+ 		},
 		{
 			"Name" : "AudioCaptureEditor",
 			"Type" : "Editor",
-      "LoadingPhase": "PostEngineInit",
- 			"WhitelistPlatforms" : [ "Win64" ]
+			"LoadingPhase": "PostEngineInit"
 		}
 	]
 }
