Revert to whitelisting only Win64 for AudioCaptureEditor
AudioCaptureEditor needs support for Linux/Mac (Failing to build from source)

#jira none
#rb Chris.Babcock
#fyi Ethan.Geller

[CL 4938687 by Brandon Schaefer in 4.22 branch]

--- a/Engine/Plugins/Runtime/AudioCapture/AudioCapture.uplugin
+++ b/Engine/Plugins/Runtime/AudioCapture/AudioCapture.uplugin
@@ -24,7 +24,8 @@
 		{
 			"Name" : "AudioCaptureEditor",
 			"Type" : "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+ 			"WhitelistPlatforms" : [ "Win64" ]
 		}
 	]
 }
