Fixed new foliage types failing to propagate via MU
They have to have RF_Transactional set when being constructed in order to be caught by the transaction correctly

#jira UE-69757
#rb none
#codereview Michael.Dupuis
#rnx

[CL 4999508 by Jamie Dale in 4.22 branch]

--- a/Engine/Plugins/Developer/Concert/ConcertSync/ConcertSyncCore/Config/Engine.ini
+++ b/Engine/Plugins/Developer/Concert/ConcertSync/ConcertSyncCore/Config/Engine.ini
@@ -12,6 +12,7 @@
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/Engine.ActorComponent',ObjectOuterClass=Class'/Script/MovieScene.MovieSceneSignedObject')
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/Engine.BookmarkBase',ObjectOuterClass=None)
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/Engine.MaterialParameterCollection',ObjectOuterClass=None)
++IncludeObjectClassFilters=(ObjectClass=Class'/Script/Foliage.FoliageType',ObjectOuterClass=Class'/Script/Engine.World')
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/MovieScene.MovieSceneSignedObject',ObjectOuterClass=None)
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/MovieScene.MovieSceneFolder',ObjectOuterClass=None)
 +IncludeObjectClassFilters=(ObjectClass=Class'/Script/Composure.CompositingElementPass',ObjectOuterClass=None)
