UE4.22 - Revert to emulated uniform buffers on Vulkan for all platforms #rb none #rnx #jira UE-66920
[CL 5048928 by Rolando Caloca in 4.22 branch]

--- a/Engine/Config/BaseDeviceProfiles.ini
+++ b/Engine/Config/BaseDeviceProfiles.ini
@@ -120,7 +120,7 @@ TextureLODGroups=(Group=TEXTUREGROUP_World,MinLODSize=1,MaxLODSize=8192,LODBias=
 [Windows DeviceProfile]
 DeviceType=Windows
 BaseProfileName=
-+CVars=r.Vulkan.UseRealUBs=1
++CVars=r.Vulkan.UseRealUBs=0		; Required until we fix HLR fall-out
 ; +CVars=r.Vulkan.EnableValidation=0
 
 [WindowsNoEditor DeviceProfile]
@@ -634,6 +634,7 @@ BaseProfileName=
 +CVars=r.LightShaftQuality=0
 +CVars=r.RefractionQuality=0
 +CVars=r.ShadowQuality=2
++CVars=r.Vulkan.UseRealUBs=0		; Required until we fix HLR fall-out
 
 [LuminClient DeviceProfile]
 DeviceType=Lumin
