#jira UE-70387 Fix up INI files to make sure we are using AudioMixerAndroid rather than AndroidAudio backend. #rb none #fyi aaron.mcleran, chris.babcock
[CL 5119930 by Ethan Geller in 4.22 branch]

--- a/Engine/Config/Android/AndroidEngine.ini
+++ b/Engine/Config/Android/AndroidEngine.ini
@@ -16,6 +16,7 @@ AudioDeviceModuleName=AndroidAudio
 AudioMixerModuleName=AudioMixerAndroid
 ; Defines a platform-specific volume headroom (in dB) for audio to provide better platform consistency with respect to volume levels.
 PlatformHeadroomDB=-6
+UseAudioMixer=true
 
 [PlatformMemoryBuckets]
 LargestMemoryBucket_MinGB=8
