UE-70084 Magic Leap blueprint Functions/Enums fail to load properly when reopening a project -Changed MagicLeapHandTracking module LoadingPhase to PreDefault, almost all other blueprint libraries seem to have earlier-than-default loadingphase. #jira UE-70084 #review-5103375 #rb Nick.Whiting
[CL 5149382 by Jeff Fisher in 4.22 branch]

--- a/Engine/Plugins/Lumin/MagicLeap/MagicLeap.uplugin
+++ b/Engine/Plugins/Lumin/MagicLeap/MagicLeap.uplugin
@@ -72,6 +72,7 @@
 		{
 			"Name" : "MagicLeapHandTracking",
 			"Type" : "Runtime",
+			"LoadingPhase" : "PreDefault",
 			"WhitelistPlatforms" :
 			[
 				"Win64",
