UE-68313 Advertising Identified (IDFA) code for iOS should be optional in the Engine #jira UE-68313 #iOS #4.22 #rb Jack.Porter
Adding Enable Advertising Identified (IDFA) in Settings >> iOS >> Build. Enabled by default

From CL4833929@Dev-Mobile

[CL 5287566 by Sorin Gradinaru in 4.22 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1856,6 +1856,7 @@ UseFastIntrinsics=False
 ForceFloats=False
 EnableMathOptimisations=True
 MaxShaderLanguageVersion=2
+bEnableAdvertisingIdentifier=True
 
 ; These are the defaults for Android settings, and they need to be in the .ini since UBT reads the .ini settings, without instantiating the class
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
