Skeletal Reduction, update whitelist to include Mac and Linux #jira UE-70731
[CL 5294454 by David Hill in 4.22 branch]

--- a/Engine/Plugins/Experimental/SkeletalReduction/SkeletalReduction.uplugin
+++ b/Engine/Plugins/Experimental/SkeletalReduction/SkeletalReduction.uplugin
@@ -20,7 +20,7 @@
 			"Name" : "SkeletalMeshReduction",
 			"Type" : "Editor",
 			"LoadingPhase" : "Default",
-			 "WhitelistPlatforms": [ "Win64" ]
+			"WhitelistPlatforms": [ "Win64", "Mac", "Linux"]
 		}
 	]
 }
